@@ -1,10 +1,12 @@
 import org.json.JSONObject;
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.util.Scanner;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
-public class Conversor{
+public class Conversor {
 
     private static final String API_URL = "https://v6.exchangerate-api.com/v6/f7aced73bb5836539cb0c698/latest/USD";
 
@@ -17,44 +19,25 @@ public class Conversor{
             System.out.println("Tipos de cambio disponibles:");
             System.out.println(exchangeRates.getJSONObject("conversion_rates").toString());
 
-            // Obtener la entrada del usuario
-            Scanner scanner = new Scanner(System.in);
-            System.out.print("Introduce la moneda de origen (USD en este ejemplo): ");
-            String fromCurrency = scanner.nextLine().toUpperCase();
-            System.out.print("Introduce la moneda de destino: ");
-            String toCurrency = scanner.nextLine().toUpperCase();
-            System.out.print("Introduce la cantidad a convertir: ");
-            double amount = scanner.nextDouble();
-
-            // Realizar la conversión
-            double convertedAmount = convertCurrency(exchangeRates, fromCurrency, toCurrency, amount);
-            System.out.println(amount + " " + fromCurrency + " equivale a " + convertedAmount + " " + toCurrency);
-        } catch (IOException e) {
+            // Aquí puedes continuar con el código para realizar la conversión de moneda
+            // ...
+        } catch (IOException | InterruptedException | URISyntaxException e) {
             System.out.println("Error al conectar con la API: " + e.getMessage());
         }
     }
 
-    private static JSONObject getExchangeRates() throws IOException {
-        URL url = new URL(API_URL);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        connection.setRequestMethod("GET");
+    private static JSONObject getExchangeRates() throws IOException, InterruptedException, URISyntaxException {
+        HttpClient httpClient = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder(new URI(API_URL)).GET().build();
 
-        // Leer la respuesta JSON
-        Scanner scanner = new Scanner(connection.getInputStream());
-        StringBuilder response = new StringBuilder();
-        while (scanner.hasNextLine()) {
-            response.append(scanner.nextLine());
+        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+
+        // Verificar el código de estado de la respuesta
+        if (response.statusCode() == 200) {
+            String jsonString = response.body();
+            return new JSONObject(jsonString);
+        } else {
+            throw new IOException("Error en la respuesta: " + response.statusCode());
         }
-        scanner.close();
-
-        // Convertir la respuesta a un objeto JSON
-        return new JSONObject(response.toString());
-    }
-
-    private static double convertCurrency(JSONObject exchangeRates, String fromCurrency, String toCurrency, double amount) {
-        JSONObject rates = exchangeRates.getJSONObject("conversion_rates");
-        double fromRate = rates.getDouble(fromCurrency);
-        double toRate = rates.getDouble(toCurrency);
-        return (amount / fromRate) * toRate;
     }
 }
